# komodo-mcp

./: COMPACT_MODE_HOWTO.md  README.md  pyproject.toml
.github/workflows/: build.yml
codegen/: generate.ts  package.json
docs/: index.html
src/komodo_mcp/: __init__.py  __main__.py  _generated.py  _helpers.py  client.py  config.py  server.py  server_compact.py  tools.py
tests/: conftest.py  docker-compose.yml  test_config.py  test_integration.py
