[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komodo-mcp"
version = "1.0.0"
description = "MCP server for Komodo — full API coverage for autonomous agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["mcp", "komodo", "docker", "deployment", "server-management", "model-context-protocol", "claude", "ai"]

[project.scripts]
komodo-mcp = "komodo_mcp:main"

[project.urls]
Homepage = "https://github.com/nikitatsym/komodo-mcp"
Repository = "https://github.com/nikitatsym/komodo-mcp"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
